fix more findbugs issues
git-svn-id: https://svn.terracotta.org/repo/tc/dso/trunk@17425 7fc7bbf3-cf45-46d4-be06-341739edd864