@@ -1,5 +1,6 @@
 /*
- * All content copyright (c) 2003-2008 Terracotta, Inc., except as may otherwise be noted in a separate copyright notice.  All rights reserved.
+ * All content copyright (c) 2003-2008 Terracotta, Inc., except as may otherwise be noted in a separate copyright
+ * notice. All rights reserved.
  */
 package com.tctest;
 
@@ -11,28 +12,28 @@ import com.tc.simulator.listener.ListenerProvider;
 import com.tctest.runner.AbstractTransparentApp;
 
 public class DuplicateRootNameTestApp extends AbstractTransparentApp {
-  private Integer        intObjRoot;        // testing duplicate root name, so this varilable is not being used.
-  private Long           longObjRoot;       // testing duplicate root name, so this varilable is not being used.
+  private Integer        intObjRoot;       // testing duplicate root name, so this varilable is not being used.
+  private Long           longObjRoot;      // testing duplicate root name, so this varilable is not being used.
 
-  private int            intRoot;           // testing duplicate root name, so this varilable is not being used.
-  private long           longRoot;          // testing duplicate root name, so this varilable is not being used.
+  private int            intRoot;          // testing duplicate root name, so this varilable is not being used.
+  private long           longRoot;         // testing duplicate root name, so this varilable is not being used.
 
-  private static Integer staticIntObjRoot;  // testing duplicate root name, so this varilable is not being used.
+  private static Integer staticIntObjRoot; // testing duplicate root name, so this varilable is not being used.
   private static Long    staticLongObjRoot; // testing duplicate root name, so this varilable is not being used.
 
-  private static int     staticIntRoot;     // testing duplicate root name, so this varilable is not being used.
-  private static long    staticLongRoot;    // testing duplicate root name, so this varilable is not being used.
+  private static int     staticIntRoot;    // testing duplicate root name, so this varilable is not being used.
+  private static long    staticLongRoot;   // testing duplicate root name, so this varilable is not being used.
 
   public DuplicateRootNameTestApp(String appId, ApplicationConfig cfg, ListenerProvider listenerProvider) {
     super(appId, cfg, listenerProvider);
   }
 
   public void run() {
-    intObjRoot = new Integer(10);
+    intObjRoot = Integer.valueOf(10);
     try {
-      longObjRoot = new Long(100);
-      System.out.println(intObjRoot);   // Putting this println to get rid of the eclipse warnings.
-      System.out.println(longObjRoot);  // Putting this println to get rid of the eclipse warnings.
+      longObjRoot = Long.valueOf(100);
+      System.out.println(intObjRoot); // Putting this println to get rid of the eclipse warnings.
+      System.out.println(longObjRoot); // Putting this println to get rid of the eclipse warnings.
       throw new AssertionError("Should have thrown a ClassCastException due to duplicate root name");
     } catch (ClassCastException e) {
       // Expected.
@@ -41,17 +42,17 @@ public class DuplicateRootNameTestApp extends AbstractTransparentApp {
     intRoot = 10;
     try {
       longRoot = 100L;
-      System.out.println(intRoot);  // Putting this println to get rid of the eclipse warnings.
+      System.out.println(intRoot); // Putting this println to get rid of the eclipse warnings.
       System.out.println(longRoot); // Putting this println to get rid of the eclipse warnings.
       throw new AssertionError("Should have thrown a ClassCastException due to duplicate root name");
     } catch (ClassCastException e) {
       // Expected.
     }
 
-    staticIntObjRoot = new Integer(10);
+    staticIntObjRoot = Integer.valueOf(10);
     try {
-      staticLongObjRoot = new Long(100);
-      System.out.println(staticIntObjRoot);  // Putting this println to get rid of the eclipse warnings.
+      staticLongObjRoot = Long.valueOf(100);
+      System.out.println(staticIntObjRoot); // Putting this println to get rid of the eclipse warnings.
       System.out.println(staticLongObjRoot); // Putting this println to get rid of the eclipse warnings.
       throw new AssertionError("Should have thrown a ClassCastException due to duplicate root name");
     } catch (ClassCastException e) {
@@ -61,7 +62,7 @@ public class DuplicateRootNameTestApp extends AbstractTransparentApp {
     staticIntRoot = 10;
     try {
       staticLongRoot = 100;
-      System.out.println(staticIntRoot);  // Putting this println to get rid of the eclipse warnings.
+      System.out.println(staticIntRoot); // Putting this println to get rid of the eclipse warnings.
       System.out.println(staticLongRoot); // Putting this println to get rid of the eclipse warnings.
       throw new AssertionError("Should have thrown a ClassCastException due to duplicate root name");
     } catch (ClassCastException e) {
