@@ -1,5 +1,6 @@
 /*
- * All content copyright (c) 2003-2008 Terracotta, Inc., except as may otherwise be noted in a separate copyright notice.  All rights reserved.
+ * All content copyright (c) 2003-2008 Terracotta, Inc., except as may otherwise be noted in a separate copyright
+ * notice. All rights reserved.
  */
 package com.tctest.restart;
 
@@ -9,14 +10,14 @@ import com.tc.exception.TCRuntimeException;
 
 public abstract class AbstractRestartTestApp implements RestartTestApp {
 
-  protected static final State INIT = new State(TestAppState.INIT);
-  protected static final State START = new State(TestAppState.START);
+  protected static final State INIT   = new State(TestAppState.INIT);
+  protected static final State START  = new State(TestAppState.START);
   protected static final State HOLDER = new State(TestAppState.HOLDER);
   protected static final State WAITER = new State(TestAppState.WAITER);
-  protected static final State END = new State(TestAppState.END);
-  protected final FutureResult state = new FutureResult();
-  private Integer id;
-  protected final ThreadGroup threadGroup;
+  protected static final State END    = new State(TestAppState.END);
+  protected final FutureResult state  = new FutureResult();
+  private Integer              id;
+  protected final ThreadGroup  threadGroup;
 
   protected AbstractRestartTestApp(ThreadGroup threadGroup) {
     super();
@@ -28,7 +29,7 @@ public abstract class AbstractRestartTestApp implements RestartTestApp {
   }
 
   public synchronized void setID(int i) {
-    this.id = new Integer(i);
+    this.id = Integer.valueOf(i);
   }
 
   public synchronized int getID() {
@@ -71,15 +72,16 @@ public abstract class AbstractRestartTestApp implements RestartTestApp {
 
   static protected final class State {
     private final String name;
-  
+
     private State(String name) {
       this.name = name;
     }
-  
+
     public String getName() {
       return this.name;
     }
-  
+
+    @Override
     public String toString() {
       return this.name;
     }
