@@ -24,13 +24,14 @@ public class ReentrantReadWriteLockDowngraderTest extends TransparentTestBase {
 
   private static final int  NODE_COUNT  = 3;
   private static final int  LOOP_COUNT  = 1000;
-  private static final long TRY_TIMEOUT = 10; //seconds
-  
+  private static final long TRY_TIMEOUT = 10;  // seconds
+
   @Override
   protected Class getApplicationClass() {
     return ReentrantReadWriteLockDowngraderTestApp.class;
   }
 
+  @Override
   public void doSetUp(TransparentTestIface t) throws Exception {
     t.getTransparentAppConfig().setClientCount(NODE_COUNT);
     t.initializeTestRunner();
@@ -90,14 +91,13 @@ public class ReentrantReadWriteLockDowngraderTest extends TransparentTestBase {
     }
 
     /**
-     * There are currently some questionable features of the server impl that mean this
-     * test is a little odd...
+     * There are currently some questionable features of the server impl that mean this test is a little odd...
      * <ol>
-     * <li>We can't just tryLock() as the server will just refuse (since the a recall is needed).
-     * Hence we wait 10 seconds for the recall to happen</li>
-     * <li>We can't do failing requests for write as this will trigger an attempt to write recall.
-     * Subsequent tryLocks at any level will then fail as the lock is alreayd "recalled".  The server
-     * does not distinguish between recall for read and recall for write in this sense.
+     * <li>We can't just tryLock() as the server will just refuse (since the a recall is needed). Hence we wait 10
+     * seconds for the recall to happen</li>
+     * <li>We can't do failing requests for write as this will trigger an attempt to write recall. Subsequent tryLocks
+     * at any level will then fail as the lock is alreayd "recalled". The server does not distinguish between recall for
+     * read and recall for write in this sense.
      * </ol>
      */
     private void runTestFailing() throws InterruptedException, BrokenBarrierException {
@@ -172,7 +172,7 @@ public class ReentrantReadWriteLockDowngraderTest extends TransparentTestBase {
       for (int i = 0; i < LOOP_COUNT; i++) {
         lock.readLock().lock();
         try {
-          map.get(new Integer(i));
+          map.get(Integer.valueOf(i));
         } finally {
           lock.readLock().unlock();
         }
@@ -189,7 +189,7 @@ public class ReentrantReadWriteLockDowngraderTest extends TransparentTestBase {
       for (int i = 0; i < LOOP_COUNT; i++) {
         lock.writeLock().lock();
         try {
-          map.put(new Integer(i), new Long(i));
+          map.put(Integer.valueOf(i), Long.valueOf(i));
         } finally {
           lock.writeLock().unlock();
         }
@@ -202,14 +202,14 @@ public class ReentrantReadWriteLockDowngraderTest extends TransparentTestBase {
       for (int i = LOOP_COUNT; i < LOOP_COUNT * 2; i++) {
         lock.writeLock().lock();
         try {
-          map.put(new Integer(i), new Long(i));
+          map.put(Integer.valueOf(i), Long.valueOf(i));
         } finally {
           // Downgrade
           lock.readLock().lock();
           lock.writeLock().unlock();
         }
         try {
-          Object o = map.get(new Integer(i));
+          Object o = map.get(Integer.valueOf(i));
           assertNotNull(o);
         } finally {
           lock.readLock().unlock();
